Allow cross compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,25 @@ project(openauto
 VERSION ${openauto_VERSION_MAJOR}.${openauto_VERSION_MINOR}.${openauto_VERSION_PATCH}
 LANGUAGES CXX)
 
+if( TARGET_ARCH STREQUAL "amd64" )
+    message("Building for amd64")
+	set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")
+elseif( TARGET_ARCH STREQUAL "armhf" )
+    message("Building for armhf")
+    set(CMAKE_C_COMPILER /usr/bin/arm-linux-gnueabihf-gcc-8)
+    set(CMAKE_CXX_COMPILER /usr/bin/arm-linux-gnueabihf-g++-8)
+	set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "armhf")
+elseif( TARGET_ARCH STREQUAL "arm64" )
+    message("Building for arm64")
+    set(CMAKE_C_COMPILER /usr/bin/aarch64-linux-gnu-gcc-12)
+    set(CMAKE_CXX_COMPILER /usr/bin/aarch64-linux-gnu-g++-12)
+	set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "arm64")
+    set(CMAKE_LIBRARY_ARCHITECTURE "aarch64-linux-gnu")
+    set(ENV{PKG_CONFIG_PATH} "/usr/lib/aarch64-linux-gnu/pkgconfig")
+else()
+    message("Target Architecture not specified, not cross compiling")
+endif()
+
 find_program(CCACHE_PROGRAM ccache)
 if(CCACHE_PROGRAM)
     set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE "${CCACHE_PROGRAM}")
